# git_sre_agents

./: .gitignore  Cargo.toml  Creditizens-SRE.yaml  README.md  human_prompt.md  install_kubectl_kind.sh  manifest.json  manifest.md  manifest.yaml  notes.md  path_to_manifest_file  sre2_notes.md  xaa
agents/end_agent/: Cargo.toml
agents/end_agent/src/: end_agent.rs  lib.rs
agents/human_request_agent/: Cargo.toml  README.md
agents/human_request_agent/src/: human_request_node.rs  lib.rs
agents/main_agent/: Cargo.toml  README.md
agents/main_agent/src/: lib.rs  main_agent.rs
agents/pr_agent/: Cargo.toml  README.md
agents/pr_agent/src/: lib.rs  pr_agent.rs
agents/sre1_worker_agent/: Cargo.toml  README.md
agents/sre1_worker_agent/src/: lib.rs  sre1_agent.rs
agents/sre2_worker_agent/: Cargo.toml  README.md
agents/sre2_worker_agent/src/: lib.rs  sre2_agent.rs
app/: Cargo.toml  README.md
app/src/: lib.rs  main.rs
core/: Cargo.toml  README.md
core/src/: .agents.rs.swp  agents.rs  commits.rs  constants.rs  discord_notifier.rs  dispatcher.rs  errors.rs  file_reader.rs  headers.rs  lib.rs  machine.rs  prompts.rs  schemas.rs  states.rs  write_file.rs
core_logic/: Cargo.toml  README.md
core_logic/src/: agents.rs  commits.rs  constants.rs  discord_notifier.rs  dispatcher.rs  envs_manage.rs  errors.rs  file_reader.rs  lib.rs  machine.rs  merge.rs  prompts.rs  pull.rs  schemas.rs  write_debug_log.rs  write_file.rs
debug/: logs.md
documentation/: crates.js  help.html  search-index.js  settings.html  src-files.js
documentation/app/: all.html  index.html
documentation/core_logic/: all.html  index.html  sidebar-items.js
documentation/core_logic/agents/: enum.AgentRole.html  enum.ChoiceTool.html  enum.MessageRole.html  enum.SchemaFieldType.html  enum.TaskCompletion.html  enum.UserType.html  fn.json_object.html  fn.json_schema.html  index.html  sidebar-items.js  struct.Agent.html  struct.CallApiResponseFormat.html  struct.Function.html  struct.FunctionDetails.html  struct.FunctionParametersContainer.html  struct.LlmResponse.html  struct.MessageHistory.html  struct.MessageToAppend.html  struct.MessagesSent.html  struct.ModelSettings.html  struct.Payload.html  struct.ResponseChoices.html  struct.ResponseFormat.html  struct.ResponseMessage.html  struct.RoutedMessage.html  struct.Schema.html  struct.SchemaFieldDetails.html  struct.StateReportPrToMain.html  struct.StateReportSreToPr.html  struct.StructOut.html  struct.TasksIdentified.html  struct.ToolCall.html  struct.ToolFunction.html  struct.Tools.html
documentation/core_logic/commits/: fn.commit_work.html  fn.sre1_branch_own_repo.html  fn.sre1_repo_path.html  fn.sre2_branch_own_repo.html  fn.sre2_repo_path.html  index.html  sidebar-items.js
documentation/core_logic/constants/: fn.agent_git_commit_work_tool.html  fn.agent_git_merge_work_tool.html  fn.agent_git_pull_work_tool.html  fn.agent_no_tool.html  fn.agent_read_file_tool.html  fn.agent_write_file_tool.html  fn.all_schemas_structout_constant.html  fn.git_commit_work_tool.html  fn.git_merge_work_tool.html  fn.git_pull_work_tool.html  fn.human_schema.html  fn.main_agent_merge.html  fn.main_agent_merge_response_format_part.html  fn.main_agent_own_task_merge_schema.html  fn.main_agent_own_task_select_agent_schema.html  fn.main_agent_read.html  fn.main_agent_read_response_format_part.html  fn.main_agent_report.html  fn.main_agent_report_response_format_part.html  fn.main_agent_report_to_main_agent_schema.html  fn.main_merge_agent_prompt.html  fn.main_merge_agent_schema.html  fn.main_merge_model_settings.html  (+115 more)
documentation/human_request_agent/: all.html  index.html  sidebar-items.js
documentation/main_agent/: all.html  index.html  sidebar-items.js
documentation/pr_agent/: all.html  index.html  sidebar-items.js
documentation/sre1_worker_agent/: all.html  index.html  sidebar-items.js
documentation/sre2_worker_agent/: all.html  index.html  sidebar-items.js
human_side/app/: nginx_service.yaml
human_side/infra/: kind-config.yaml
install_scripts/: install_docker.sh
project_git_repos/human_side/: human_request.md
project_git_repos_example/human_side/: human_request.md
(+192 files in other folders)
