[workspace]

resolver = "2"

members = [
  # agents
  "agents/main_agent",
  "agents/pr_agent",
  "agents/sre1_worker_agent",
  "agents/sre2_worker_agent",
  # core shared between all
  "core",
  # main app entrypoint binary
  "app",
]

[workspace.dependencies]
anyhow = "1.0"
dotenvy = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
