[package]
name = "core-logic"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
anyhow      = { workspace = true }
reqwest     = { workspace = true }
dotenvy     = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
