[package]
name = "human-request-agent"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
core-logic        = { path = "../../core_logic" }
sre1-worker-agent = { path= "../../agents/sre1_worker_agent" }
sre2-worker-agent = { path= "../../agents/sre2_worker_agent" }
tokio       = { workspace = true }
serde       = { workspace = true }
anyhow      = { workspace = true }
reqwest     = { workspace = true }
dotenvy     = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
