[package]
name = "sre1-worker-agent"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
core-logic  = { path = "../../core_logic" }
tokio       = { workspace = true }
serde       = { workspace = true }
anyhow      = { workspace = true }
reqwest     = { workspace = true }
dotenvy     = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
